# semantic_search

./: .gitignore  CLIP_INTEGRATION_README.md  ECOMMERCE_SEARCH_README.md  LICENSE  README.md  clip_example.py  ecommerce_search_example.py  evaluation_example.py  extension_retriever_example.py  openai_llm_example.py  pyproject.toml  requirements.txt  run_streamlit.py  streamlit_app.py  streamlit_config.py  test_streamlit_data.py  unified_retriever_example.py
config/: __init__.py  settings.py
config/models/: embedding_models.yaml  llm_models.yaml
docs/: CLIP_INTEGRATION_README.md  ECOMMERCE_SEARCH_README.md  OPENAI_LLM_README.md  README_streamlit.md  RETRIEVERS.md  STREAMLIT_IMPLEMENTATION_SUMMARY.md
examples/: migration_example.py  test_clip_integration.py
scripts/: README.md  README_xgboost.md  create_ground_truth.py  create_retrievers.py  download_images.py  evaluate_retrievers.py  expand_queries_cli.py  extract_features_cli.py  generate_queries_cli.py  train_xgboost.py
src/: __init__.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  embedding_models.py  image_models.py  llm_models.py  model_factory.py
src/models/prompts/: __init__.py  generation_prompts.py  judge_prompts.py  query_prompts.py
src/retrievers/: __init__.py  base.py  bm25_retriever.py  faiss_retriever.py  unified_retriever.py
src/utils/: __init__.py  config_loader.py
